--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "DM APP - DM Online",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "4.15.4",
     "socket.io": "1.7.4"
   },
